--- a/public/css/app.css
+++ b/public/css/app.css
@@ -5,6 +5,12 @@
 }
 
 
+/* .container {
+    margin-left: 100px;
+    margin-right: 100px;
+} */
+
+
 /*
 * {
     margin: 0;
@@ -52,8 +58,6 @@ body {
 }
 
 .map {
-    justify-content: center;
-    align-items: center;
     padding-top: 30px;
     height: 270px;
 }
